# PaintingWithFabrik

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/FABRIK_kinematics/: CMakeLists.txt  FABRIK_moveit_plugin.xml  package.xml
src/FABRIK_kinematics/include/FABRIK_kinematics/: FABRIK_moveit_plugin.h  chainiksolver_vel_mimic_svd.hpp  joint_mimic.hpp
src/FABRIK_kinematics/src/: FABRIK_moveit_plugin.cpp  Main.py  chainiksolver_vel_mimic_svd.cpp
src/FABRIK_kinematics_plugin/: CMakeLists.txt  FABRIK_kinematics_plugin.xml  package.xml
src/FABRIK_kinematics_plugin/include/FABRIK_kinematics_plugin/: FABRIK_kinematics_plugin.h
src/FABRIK_kinematics_plugin/src/: FABRIK_kinematics_plugin.cpp
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: kinematics.yaml  panda.srdf  ros_controllers.yaml
src/panda_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  planning_context.launch
src/panda_planning/: CMakeLists.txt  package.xml
src/panda_planning/launch/: move_group_interface_tutorial.launch
src/panda_planning/src/: move_group_interface_tutorial.cpp
src/panda_trajectory/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_trajectory/config/: fake_controllers.yaml  kinematics.yaml  panda.srdf  ros_controllers.yaml
src/panda_trajectory/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/panda_trajectory/src/: move_group.py
